added mdn video rec

--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Web Recorder</title>
-    <link rel="stylesheet" href="./web-recorder-style.css" />
-    <script type="text/javascript" src="audio_script.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Web Recorder</h1>
-    </header>
-    <main>
-      <div class="controls">
-        <button type="button" id="mic">Get Microphone</button>
-        <button type="button" id="record" hidden>Record</button>
-      </div>
-      <ul id="recordings"></ul>
-    </main>
-    <footer>
-      <p>
-        Built with 🎤 by Ekip 2 from a tuto by <a href="https://twitter.com/philnash">philnash</a>
-      </p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./web-recorder-style.css" />
+  <title>Document</title>
+</head>
+<body>
+  <div style="text-align: center;">
+    <a href="audio.html">get audio</a>
+    <a href="video_mat_scales.html">get video by mat</a>
+    <a href="video_MDN.html">get video by MDN</a>
+  </div>
+</body>
 </html>
