--- a/video_mat_scales.html
+++ b/video_mat_scales.html
@@ -6,12 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Web Recorder</title>
     <link rel="stylesheet" href="./web-recorder-style.css" />
-    <script type="text/javascript" src="video_script_2.js"></script>
+    <script type="text/javascript" src="video_script_mat_scales.js"></script>
   </head>
   <body>
-    <header>
-      <h1>Web Recorder</h1>
-    </header>
     <main>
       <a id="download">Download</a>
         <button id="stop">Stop</button>
