resolved issue with getelements

--- a/video_MDN.html
+++ b/video_MDN.html
@@ -92,23 +92,25 @@
   <header>
     <h1><a href="https://developer.mozilla.org/en-US/docs/Web/API/MediaStream_Recording_API/Recording_a_media_element"> from MDN</a></h1>
   </header>
-  <div class="left">
-    <div id="startButton" class="button">
-      Start
+  <main>
+    <div class="left">
+      <div id="startButton" class="button">
+        Start
+      </div>
+      <h2>Preview</h2>
+      <video id="preview" width="160" height="120" autoplay muted></video>
     </div>
-    <h2>Preview</h2>
-    <video id="preview" width="160" height="120" autoplay muted></video>
-  </div>
-
-  <div class="right">
-    <div id="stopButton" class="button">
-      Stop
+  
+    <div class="right">
+      <div id="stopButton" class="button">
+        Stop
+      </div>
+      <h2>Recording</h2>
+      <video id="recording" width="160" height="120" controls></video>
+      <a id="downloadButton" class="button">
+        Download
+      </a>
     </div>
-    <h2>Recording</h2>
-    <video id="recording" width="160" height="120" controls></video>
-    <a id="downloadButton" class="button">
-      Download
-    </a>
-  </div>
+  </main>
 </body>
 </html>
