--- a/video_MDN.html
+++ b/video_MDN.html
@@ -111,6 +111,9 @@
         Download
       </a>
     </div>
+    <div class="bottom">
+      <pre id="log"></pre>
+    </div>
   </main>
 </body>
 </html>
