video can record

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Document</title>
 </head>
 <body>
-  <div style="text-align: center;">
+  <div style="text-align: center; display: flex; justify-content: space-around; align-items: center; height: 300px;">
     <a href="audio.html">get audio</a>
-    <a href="video_mat_scales.html">get video by mat</a>
-    <a href="video_MDN.html">get video by MDN</a>
+    <a href="video.html">get video</a>
+    <a href="video_MDN.html">get video MDN style</a>
   </div>
 </body>
 </html>
